<resources>
    <string name="app_name">Professores e Matérias</string>
    <string name="txt_title">Professores e Matérias</string>
    <string name="txt_titleAdicionarProfessor">Adicionar professor</string>
    <string name="txt_titleExcluirProfessor">Excluir professor</string>
    <string name="txt_titleListaDeProfessores">Lista de professores</string>
    <string name="txt_titleEditarProfessor">Editar professor</string>
    <string name="txt_titleDetalhesProfessor">Detalhes do professor</string>
    <string name="txt_titleListaDeMaterias">Lista de matérias</string>
    <string name="txt_titleEditarMateria">Editar matéria</string>
    <string name="txt_titleDetalhesMateria">Detalhes da matéria</string>
    <string name="txt_titleAdicionarMateria">Adicionar matéria</string>
    <string name="txt_titleExcluirMateria">Excluir matéria</string>
    <string name="txt_subtitle">Controle de professores e matérias</string>
    <string name="txt_SubtitleControleProfessores">Controle de professores</string>
    <string name="txt_SubtitleControleMaterias">Controle de materias</string>
    <string name="img_btn_professor">Botão professor</string>
    <string name="img_btn_adicionar_professor">Botão adicionar professor</string>
    <string name="img_btn_listar_professores">Botão listar professores</string>
    <string name="img_btn_editar_professor">Botão editar professor</string>
    <string name="img_btn_excluir_professor">Botão excluir professor</string>
    <string name="img_btn_materia">Botão matéria</string>
    <string name="img_btn_adicionar_materia">Botão adicionar matéria</string>
    <string name="img_btn_listar_materias">Botão listar matérias</string>
    <string name="img_btn_editar_materia">Botão editar matéria</string>
    <string name="img_btn_excluir_materia">Botão excluir matéria</string>
    <string name="txt_direitos">Todos os direitos reservados ©</string>
    <string name="txt_PLeOzieckDesenvolvimento">PL e Ozieck Desenvolvimento</string>
    <string name="txt_PauloEOzieck">Por Paulo Lima e Gabriel Ozieck</string>
    <string name="img_view_Nome">Nome</string>
    <string name="img_view_Data">Data de nascimento</string>
    <string name="img_view_Nascimento">Local de nascimento</string>
    <string name="img_view_Endereco">Endereço</string>
    <string name="img_view_Email">Email</string>
    <string name="img_view_Telefone">Telefone</string>
    <string name="img_view_Formacoes">Formações</string>
    <string name="img_view_Area">Área</string>
    <string name="img_view_CargaHoraria">Carga horária</string>
    <string name="img_view_Campus">Campus</string>
    <string name="img_view_Professor">Professor</string>
    <string name="bnt_Cancelar">Cancelar</string>
    <string name="bnt_Cadastrar">Cadastrar</string>
    <string name="btn_Editar">Editar</string>
</resources>
